--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,6 +12,17 @@
     <string name="storepage_setting_button">Setting</string>
     <string name="storepage_addnewitem">Add New Product</string>
     
+    <string name="resultpage_queryinstruction">Let\'s find what you want!</string>
+    <string name="resultpage_queryplaceholder">Type your query here</string>
+    
+    <string name="resultdetailpage_productname">Product:</string>
+    <string name="resultdetailpage_productprice">Price:</string>
+    <string name="resultdetailpage_shipping">Shipping:</string>
+    <string name="resultdetailpage_description">Description:</string>
+    <string name="resultdetailpage_button_favorite">Favorite</string>
+    <string name="resultdetailpage_button_report">Report</string>
+    <string name="resultdetailpage_button_buy">Order</string>
+    
     <string name="storedetailpage_message1">Let us know more...</string>
     <string name="storedetailpage_message2">About your store</string>
     <string name="storedetailpage_storename">Store name: </string>
@@ -31,9 +42,11 @@
     <string name="productdetailpage_submit_additem">Add</string>
     <string name="productdetailpage_submit_finish">Finish</string>
     <string name="productdetailpage_submit_ok">OK</string>
-    <string name="productdetailpage_cancle">Cancle</string>
+    <string name="productdetailpage_delete">Delete</string>
     
     <string name="imagecropperpage_submit_button">OK</string>
+    <string name="imagecropperpage_instruction">Touch Here to Select Image.</string>
+    <string name="imagecropperpage_instruction2">Crop Photo then Touch OK.</string>
     
     <string name="banpage_message1">Sorry, service is temporary unavailable.</string>
     <string name="banpage_message2">Please contract us for more details.</string>
